--- a/.github/workflows/deploy-prometheus.yaml
+++ b/.github/workflows/deploy-prometheus.yaml
@@ -5,7 +5,7 @@ on:
       branches: [ main ]
       paths:
       - '.github/workflows/deploy-prometheus.yaml'
-      - 'observability/**'
+      - 'sandbox/observability/**'
 
 jobs:
   deploy:
