--- a/.github/workflows/deploy-prometheus.yaml
+++ b/.github/workflows/deploy-prometheus.yaml
@@ -32,3 +32,4 @@ jobs:
         prometheus_config: sandbox/observability/prometheus/prometheus.yml
 
         # tf_stack_destroy: true
+        # test
