--- a/.github/workflows/deploy-prometheus.yaml
+++ b/.github/workflows/deploy-prometheus.yaml
@@ -31,5 +31,4 @@ jobs:
         grafana_datasource_dir: sandbox/observability/grafana/datasources
         prometheus_config: sandbox/observability/prometheus/prometheus.yml
 
-        # tf_stack_destroy: true
-        # test
+        tf_stack_destroy: true
